# xoq

./: .gitignore  .wser_server_key  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  connectivity.yml  pages.yml  release-pypi.yml
api-baselines/: can.api  cv2.api  serial.api
examples/: cam_test.rs  camera_server.rs  can_server.rs  client.rs  client_auth.rs  client_iroh.rs  gen_token.rs  iroh_latency_test.rs  list_ports.rs  rustypot_remote.rs  serial_port_compat.rs  serial_server.rs  serial_test.rs  server.rs  server_auth.rs  server_iroh.rs  so100_teleop.rs
js/: generate_urdf.mjs  package-lock.json  package.json  run_can_test.mjs  screenshot_depth.mjs  screenshot_openarm.mjs  test_browser.mjs  test_minimal.mjs  test_moq.mjs  test_openarm.mjs  test_openarm_depth.mjs  vite.config.js
js/examples/: camera.html  can_cmd_test.html  index.html  moq_test.html  openarm.html  publish.html  publish.ts  subscribe.html  subscribe.ts  test_minimal.html  urdf_viewer.html
js/examples/assets/meshes/: .gitignore
js/src/: index.ts  types.ts
python/: Cargo.toml  pyproject.toml  xoq.pyi
python/examples/: serial_client_iroh.py  serial_pyserial_compat.py  serial_server_iroh.py
python/src/: camera_server.rs  lib.rs  opencv.rs
scripts/: check_python_api.py
src/: audio_server.rs  camera.rs  camera_server.rs  can_server.rs  cmaf.rs  frame.rs  iroh.rs  lib.rs  moq.rs  moq_can_server.rs  nvenc_av1.rs  opencv.rs  serial.rs  serial_bridge.rs  serial_client.rs  serial_server.rs  serialport_impl.rs  socketcan_impl.rs  sounddevice_impl.rs
tests/: pubsub.rs  test_connectivity.py
