[workspace]
members = [".", "packages/serial", "packages/cv2", "packages/can"]

[package]
name = "xoq"
version = "0.3.3"
edition = "2021"
description = "X-Embodiment over QUIC - P2P and relay communication for robotics"
license = "Apache-2.0"
repository = "https://github.com/haixuantao/xoq"

[features]
default = []
iroh = ["dep:iroh"]
image = ["dep:image"]
# Server-side features (require hardware access)
serial = ["dep:serialport"]
camera = ["dep:nokhwa", "image"]
# Local CAN support (Linux only, requires socketcan)
can = ["dep:socketcan", "dep:libc"]
# Remote client features (cross-platform, no hardware deps)
serial-remote = ["iroh"]
camera-remote = ["iroh", "image"]
can-remote = ["iroh"]

[dependencies]
moq-transport = "0.12"
moq-token = "0.5"
iroh = { version = "0.95", optional = true }
serialport = { version = "4", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
image = { version = "0.25", optional = true }
socketcan = { version = "3.5", optional = true }
libc = { version = "0.2", optional = true }
moq-native = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
bytes = "1"
rand = "0.9"

[dev-dependencies]
rustypot = "1.4.2"
ctrlc = "3"

[[example]]
name = "serial_server"
path = "examples/serial_server.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "serial_client"
path = "examples/serial_client.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "rustypot_remote"
path = "examples/rustypot_remote.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "so100_teleop"
path = "examples/so100_teleop.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "can_server"
path = "examples/can_server.rs"
required-features = ["iroh", "can"]

[[example]]
name = "can_client"
path = "examples/can_client.rs"
required-features = ["iroh", "can"]
