[workspace]
members = [".", "packages/serial", "packages/cv2", "packages/can"]

[package]
name = "xoq"
version = "0.3.4"
edition = "2021"
description = "X-Embodiment over QUIC - P2P and relay communication for robotics"
license = "Apache-2.0"
repository = "https://github.com/haixuantao/xoq"

[features]
default = []
iroh = ["dep:iroh", "dep:iroh-quinn-proto"]
image = ["dep:image"]
# Server-side features (require hardware access)
serial = ["dep:serialport"]
camera = ["dep:v4l", "image"]
nvenc = ["camera", "dep:nvidia-video-codec-sdk", "dep:cudarc"]
# macOS camera capture (AVFoundation)
camera-macos = ["image", "dep:objc2", "dep:objc2-foundation", "dep:objc2-av-foundation", "dep:block2", "dep:dispatch"]
# macOS H.264 encoding (VideoToolbox) - implies camera-macos
vtenc = ["camera-macos", "dep:video-toolbox-sys", "dep:core-foundation", "dep:core-foundation-sys", "dep:core-media-sys", "dep:libc"]
videotoolbox = ["camera-remote", "dep:video-toolbox-sys", "dep:core-foundation", "dep:core-foundation-sys", "dep:core-media-sys", "dep:libc"]
# Local CAN support (Linux only, requires socketcan)
can = ["dep:socketcan", "dep:libc"]
# Remote client features (cross-platform, no hardware deps)
serial-remote = ["iroh"]
camera-remote = ["iroh", "image"]
can-remote = ["iroh"]

[dependencies]
moq-transport = "0.12"
moq-token = "0.5"
iroh = { version = "0.95", optional = true }
iroh-quinn-proto = { version = "0.13", optional = true }
serialport = { version = "4", optional = true }
v4l = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }
socketcan = { version = "3.5", optional = true }
libc = { version = "0.2", optional = true }
moq-native = { version = "0.12", default-features = false, features = ["ring"] }
web-transport-quinn = "0.3"
web-transport = "0.3"
quinn = { version = "0.11", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
bytes = "1"
rand = "0.9"
# Hardware video encoding (optional)
nvidia-video-codec-sdk = { path = "packages/nvidia-video-codec-sdk", optional = true }
cudarc = { version = "=0.16.4", features = ["cuda-version-from-build-system"], optional = true }
# macOS AVFoundation camera capture (optional)
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString", "NSObject", "NSDictionary", "NSArray"] }
objc2-av-foundation = { version = "0.3", optional = true, features = ["AVCaptureDevice", "AVCaptureSession", "AVCaptureInput", "AVCaptureOutput", "AVMediaFormat"] }
block2 = { version = "0.6", optional = true }
dispatch = { version = "0.2", optional = true }
# Hardware video encoding/decoding - macOS VideoToolbox (optional)
video-toolbox-sys = { git = "https://github.com/haixuantao/video-toolbox-sys", optional = true }
core-foundation = { version = "0.9", optional = true }
core-foundation-sys = { version = "0.8", optional = true }
core-media-sys = { version = "0.1.0", optional = true }

[dev-dependencies]
rustypot = "1.4.2"
ctrlc = "3"

[[example]]
name = "serial_server"
path = "examples/serial_server.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "serial_client"
path = "examples/serial_client.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "rustypot_remote"
path = "examples/rustypot_remote.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "so100_teleop"
path = "examples/so100_teleop.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "reachy_mini"
path = "examples/reachy_mini.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "can_server"
path = "examples/can_server.rs"
required-features = ["iroh", "can"]

[[example]]
name = "can_client"
path = "examples/can_client.rs"
required-features = ["iroh", "can"]

[[example]]
name = "camera_server"
path = "examples/camera_server.rs"
required-features = ["iroh"]

[[example]]
name = "camera_client"
path = "examples/camera_client.rs"
required-features = ["camera-remote"]

[[example]]
name = "moq_can_server"
path = "examples/moq_can_server.rs"
required-features = ["can"]

[[example]]
name = "moq_serial_server"
path = "examples/moq_serial_server.rs"
required-features = ["serial"]

[[example]]
name = "moq_serial_client"
path = "examples/moq_serial_client.rs"

[[example]]
name = "moq_test"
path = "examples/moq_test.rs"

[[example]]
name = "iroh_latency_test"
path = "examples/iroh_latency_test.rs"
required-features = ["iroh"]

