[package]
name = "xoq-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "xoq"
crate-type = ["cdylib"]

[features]
default = []
iroh = ["xoq/iroh"]
serial = ["xoq/serial"]

[dependencies]
xoq = { path = ".." }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
