[package]
name = "xoq-python"
version = "0.2.1"
edition = "2021"
description = "X-Embodiment over QUIC - Python bindings for P2P and relay communication"
license = "Apache-2.0"
repository = "https://github.com/haixuantao/xoq"

[lib]
name = "xoq"
crate-type = ["cdylib"]

[features]
default = []
iroh = ["xoq/iroh"]
serial = ["xoq/serial"]
camera = ["xoq/camera", "numpy"]

[dependencies]
xoq = { path = ".." }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
numpy = { version = "0.22", optional = true }
